--- a/面试学习/面试题收集(个人遇到的问题).md
+++ b/面试学习/面试题收集(个人遇到的问题).md
@@ -1,3 +1,5 @@
+
+
 # 									面试问题收集处
 
 ## Java基础：
@@ -217,39 +219,719 @@ public class Person implements Serializable {
 
 
 
+
+
+这里有个补充问题：**transient修饰的变量真的就不能被序列化了吗？**
+
+​		在java中，对象序列化可以通过实现两种接口来实现：
+
+- 如果实现的是**Serializable**接口，则所有信息（不包括被static、transient修饰的变量信息）的序列化将**自动**进行。
+- 如果实现的是**Externalizable**接口，则不会进行自动序列化，需要开发者在**writeExternal()\**方法中\**手工**指定需要序列化的变量，与是否被transient修饰无关。
+
+
+
+
+
+
+
 #### 3.(集合类) 说一下HashMap
 
-
-
-
-
-#### 
-
-
-
-#### 
-
-#### 
-
-#### 
+​	具体前往 md文档 **集合类**中查看。
 
 
 
 
 
-#### 
+#### 4.(集合类)  集合类能否一边遍历？一边删除，可以的话应该如何实现？不能的话又是什么原因？
+
+```java
+
+    public static void main(String[] args) {
+        List<String> platformList = new ArrayList<>();
+        platformList.add("博客园");
+        platformList.add("CSDN");
+        platformList.add("掘金");
+
+        for (String platform : platformList) {
+            if (platform.equals("博客园")) {
+                platformList.remove(platform);
+            }
+        }
+
+        System.out.println(platformList);
+
+    }
+```
+
+如上述的代码，运行后会出现如下图所示的并发问题：ConcurrentModificationException（并发修改异常）
+
+![集合类的一边遍历一边删除操作](C:\Users\AWU\Desktop\面试学习\面经问题图片存储池\集合类的一边遍历一边删除操作.png)
+
+通过debug(Alt+Shift+F7强制进入) 可以发现，foreach循环在实际执行时，使用的是Iterator 类，其核心方法是hasNext() next()。
+
+本次测试用例为ArrayList类，其内有实现了Iterator接口的Itr私有内部类。
+
+```java
+   private class Itr implements Iterator<E> {
+        int cursor;       // index of next element to return
+        int lastRet = -1; // index of last element returned; -1 if no such
+        int expectedModCount = modCount;
+
+        Itr() {}
+
+        public boolean hasNext() {
+            return cursor != size;
+        }
+
+        @SuppressWarnings("unchecked")
+        public E next() {
+            checkForComodification();
+            int i = cursor;
+            if (i >= size)
+                throw new NoSuchElementException();
+            Object[] elementData = ArrayList.this.elementData;
+            if (i >= elementData.length)
+                throw new ConcurrentModificationException();
+            cursor = i + 1;
+            return (E) elementData[lastRet = i];
+        }
+```
+
+
+
+![ArrayList中的Itr类](C:\Users\AWU\Desktop\面试学习\面经问题图片存储池\ArrayList中的Itr类.png)
+
+```java
+//一个检测并发修改是否异常的方法，也是上例代码中报错bug所在处
+final void checkForComodification() {
+            if (modCount != expectedModCount)
+                throw new ConcurrentModificationException();
+        }	
+```
+
+可以看到，checkForComodification() 方法的核心逻辑是：比较expectedModCount和modCount这两个变量的值。
+
+```java
+//此列表在结构上被修改的次数。 结构修改是改变列表的大小，或者以其他方式扰乱它，以致正在进行的迭代可能会产生不正确的结果。
+//一个短暂的变量(transient)且只在包内产生作用(protected)   
+protected transient int modCount = 0;
+
+```
+
+而modCount是如何增加的呢？可以看到，add()方法中每次添加一个元素，会使得modCount++自增。具体看如下代码：
+
+```java
+public void add(int index, E element) {
+        rangeCheckForAdd(index);
+
+        ensureCapacityInternal(size + 1);  // Increments modCount!!
+        System.arraycopy(elementData, index, elementData, index + 1,
+                         size - index);
+        elementData[index] = element;
+        size++;
+    }
+
+//封装
+private void ensureCapacityInternal(int minCapacity) {
+   ensureExplicitCapacity(calculateCapacity(elementData, minCapacity));
+    }
+
+//ensureExplicitCapacity()方法中进行了modCount的自增
+  private void ensureExplicitCapacity(int minCapacity) {
+        modCount++;
+
+        // overflow-conscious code
+        if (minCapacity - elementData.length > 0)
+            grow(minCapacity);
+    }
+
+```
+
+所以，根据源代码可知，上述用例中未进行删除操作前，modCount和expectedModCount的值都为3，但进行删除操作时，会有什么变化呢？可以先理解一下remove() 方法：
+
+```java
+public E remove(int index) {
+        rangeCheck(index);
+
+        modCount++;
+        E oldValue = elementData(index);
+
+        int numMoved = size - index - 1;
+        if (numMoved > 0)
+            System.arraycopy(elementData, index+1, elementData, index,
+                             numMoved);
+        elementData[--size] = null; // clear to let GC do its work
+
+        return oldValue;
+    }
+```
+
+如上，从源代码中可知，当进行了删除操作，modCount会自增一次(modCount是记录**修改的次数**，故是进行自增)，于是在遍历得到对应要删除的值时，进行删除操作后modCount将为4，与expectedModCount 不等，所以会抛出**并发修改异常( ConcurrentModificationException )**。
+
+
+
+既然不能使用foreach来实现，那么该如何实现呢？
+
+​	主要有**三种**方法。——
+
+​		① 使用Iterator 的remove() 方法。
+
+​		② 使用for循环正序遍历
+
+​		③ 使用for循环倒叙遍历
+
+对于第一种方法，使用Iterator接口来实现遍历删除操作。首先需要明白，Iterator是一个接口，不能作为一个实例对象实现，必须通过被它实现的类来进行实例化操作。然后通过类来指向对应的方法中。
+
+```java
+public static void main(String[] args) {
+    List<String> platformList = new ArrayList<>();
+    platformList.add("博客园");
+    platformList.add("CSDN");
+    platformList.add("掘金");
+
+    Iterator<String> iterator = platformList.iterator();
+    while (iterator.hasNext()) {
+        String platform = iterator.next();
+        if (platform.equals("博客园")) {
+            iterator.remove();
+        }
+    }
+
+    System.out.println(platformList);
+}
+```
+
+该方法可以实现，是因为在remove方法中，进行了expectedModCount的重新赋值。如下源代码可看出：
+
+```java
+public void remove() {
+            if (lastRet < 0)
+                throw new IllegalStateException();
+            checkForComodification();
+
+            try {
+                ArrayList.this.remove(lastRet);
+                cursor = lastRet;
+                lastRet = -1;
+                expectedModCount = modCount;  //重点地方
+            } catch (IndexOutOfBoundsException ex) {
+                throw new ConcurrentModificationException();
+            }
+        }
+```
+
+可以看到，只要调用了remove() 方法，就会将modCount的值重新赋值给expectedModCount，故两个变量相等则不会出现并发修改异常(ConcurrentModificationException)。
+
+
+
+对于第二种方法，使用for循环进行正序遍历，
+
+```java
+public static void main(String[] args) {
+    List<String> platformList = new ArrayList<>();
+    platformList.add("博客园");
+    platformList.add("CSDN");
+    platformList.add("掘金");
+
+    for (int i = 0; i < platformList.size(); i++) {
+        String item = platformList.get(i);
+
+        if (item.equals("博客园")) {
+            platformList.remove(i);
+            i = i - 1;
+        }
+    }
+
+    System.out.println(platformList);
+}
+```
+
+通过数组的下标来删除元素，但需要明白一点，当你删除当前数组下标元素，后面的元素将会向前移，而此刻将会i++，所以要进行一次i--的操作。
+
+
+
+对于第三种方法，使用for循环进行倒序遍历：
+
+```java
+public static void main(String[] args) {
+    List<String> platformList = new ArrayList<>();
+    platformList.add("博客园");
+    platformList.add("CSDN");
+    platformList.add("掘金");
+
+    for (int i = platformList.size() - 1; i >= 0; i--) {
+        String item = platformList.get(i);
+
+        if (item.equals("掘金")) {
+            platformList.remove(i);
+        }
+    }
+
+    System.out.println(platformList);
+}
+```
+
+这里不需要修正下标，因为从后往前查找删除元素，并不会影响到前面元素的查找。
+
+
+
+#### 5.接口和抽象类的区别，以及各自的使用场景.
+
+​	首先，了解一下各自的特点。
+
+​		如接口，接口是**一个规范、一个抽象类型，是抽象方法的集合**。( 例如  某种事物对外提供的一些功能的说明 )。接口以interface来声明，且Java以**接口实现多态**的功能来弥补了单一继承的缺陷。(通过接口可以多实现，从而使得Java单一继承类、多实现接口)。由于接口**不能直接实例化，只能通过引用**，也就是说需要通过实现了接口的实现类来实例化对象才能使用接口的功能。**在interface中所有的方法都是public abstract的，即使你没有申明它是public  abstract的。在interface中所有的数据成员都是public static final的，即使你没有申明.但不能是blank  final 在编译时候确定的**。
+
+​		如抽象类，由abstract修饰的类就叫抽象类。官方给的定义是：如果**一个类没有包含足够多的信息来描述一个具体的对象，这样的类就是抽象类**。**抽象方法必须在抽象类中(也即是说抽象方法存在于一个类中，那么该类必须被声明为抽象类)，相对于接口来说抽象类中可以有普通方法**。抽象方法就如接口中声明的方法一样，只需要声明不需要实现，这也是由于**抽象类不能直接实例化**。且需要知道，**构造方法 和 static 方法不能是抽象的**。
+
+​	
+
+**相同**：① 都不能直接实例化，都可以被继承(接口可以继承接口、抽象类可以实现接口、抽象类可以继承实体类，但前提是实体类必须有明确的构造方法)
+
+​			② 都是不断向上抽取的结果。
+
+
+
+**不同**： ① 抽象类中可以有非抽象方法(普通方法等)，接口只能有抽象方法。
+
+​			 ② 接口体现的是一种规范，抽象类体现的是模板式设计。(抽象类是对整个类整体进行抽象，包括属性、行为，但是接口却是对类局部(行为)进行抽象)
+
+​			 ③ 在接口中，所有方法都是抽象的，其他语言如C++中的**多继承的特性可以通过 "多继承接口"来体现**。因而接口可以被多继承而抽象类只能被单继承。
+
+​			④ 接口里不可以定义静态方法，抽象类可以有(但不能定义为 static abstract  方法，不被允许)
+
+​			⑤ 接口没有构造方法，而抽象类需要有构造方法(即使没有声明，在编译过程编译器也会为抽象类添加默认的无参构造器)。
+
+
+
+注意点：(1)**抽象类中不能有静态的抽象方法**，这是由于 **抽象类不能被实例化，也就是说JVM层面上它不被分配内存空间，而静态static修饰的方法在类进行实例化之前就已经被分配了内存**，这样就出现了矛盾：抽象类不被分配内存，而static修饰的方法必须别分配内存。
+
+​				(2) **接口也不能有静态的抽象方法**，这是因为**接口中声明的方法是被public abstract隐性修饰**的，且接口也是无法直接实例化，导致不能被分配内存，故与static相悖。
+
+​				(3) 为什么抽象类需要构造方法呢？这是因为继承了抽象类的子类的构造方法中会有super()调用父类抽象类的构造函数。(抽象类也是类的一种，被子类继承后，子类构造方法中就需要调用父类的构造方法)
+
+
+
+#### 6.static关键字、final关键字的含义以及使用场景
+
+
+
+
+
+#### 7.在子类的构造函数中为什么必须调用父类的构造函数
+
+
+
+#### 8.了解过设计模式吗？说说你所熟悉的设计模式。
+
+
+
+
+
+#### 9.Arrays.sort和Collections.sort 的实现原理和区别
+
+​		这里的Collections是**一个工具类**，相比于**Collection接口**(这是一个接口，是List、Set、Deque所实现的接口，提供了对集合对象进行基本操作的通用接口方法)而言，首先Collections是一个工具类(类，而不是接口)，提供了一系列静态方法实现**对各种集合的搜索、排序、线程安全等操作，并且还有 混排(Shuffling)、反转(Reverse)、替换所有元素(fill)、拷贝(copy)、返回Collections中最小元素/最大元素(min/max)、返回指定源列表中最后一次出现指定目标列表的起始位置(lastIndexOfSubList)、返回指定源列表中第一次出现指定目标列表的起始位置(IndexOfSubList)、根据指定的距离循环移动指定列表中的元素(Rotate)**。
+
+​		回到问题本身，Collections.sort方法底层实现原理是调用了Arrays.sort方法。接下来请看Collections中的sort方法的源代码：
+
+```java
+public static <T extends Comparable<? super T>> void sort(List<T> list) {
+        list.sort(null);
+    }
+
+public static <T> void sort(List<T> list, Comparator<? super T> c) {
+        list.sort(c);
+    }
+```
+
+由上述可发现，均调用的是List集合中的sort方法，而List集合中的sort方法如下：
+
+```java
+default void sort(Comparator<? super E> c) {
+        Object[] a = this.toArray();
+        Arrays.sort(a, (Comparator) c);
+        ListIterator<E> i = this.listIterator();
+        for (Object e : a) {
+            i.next();
+            i.set((E) e);
+        }
+    }
+```
+
+可以看到，调用的是Arrays.sort方法。
+
+​		那么，接下来该了解Arrays.sort的底层实现原理了，先看源代码：
+
+```java
+public static <T> void sort(T[] a, Comparator<? super T> c) {
+        if (c == null) {
+            sort(a);
+        } else {
+            if (LegacyMergeSort.userRequested)
+                legacyMergeSort(a, c);
+            else
+                TimSort.sort(a, 0, a.length, c, null, 0, 0);
+        }
+    }
+
+public static void sort(Object[] a) {
+        if (LegacyMergeSort.userRequested)
+            legacyMergeSort(a);
+        else
+            ComparableTimSort.sort(a, 0, a.length, null, 0, 0);
+    }
+```
+
+​		这里，首先判断有没有传入比较器Comparator实例，若没有则进入sort(Object[] a)方法之中，并且要么采用 legacyMergeSort(a)归并排序，要么ComparableTimSort.sort (TimSort排序)。
+
+​		TimSort排序：结合了归并排序(merge sort) 和插入排序(insertion sort) 而得出的排序算法。
+
+```java
+TimSort 算法为了减少对升序部分的回溯和对降序部分的性能倒退，将输入按其升序和降序特点进行了分区。排序的输入的单位不是一个个单独的数字，而是一个个的块-分区。其中每一个分区叫一个run。针对这些 run 序列，每次拿一个 run 出来按规则进行合并。每次合并会将两个 run合并成一个 run。合并的结果保存到栈中。合并直到消耗掉所有的 run，这时将栈上剩余的 run合并到只剩一个 run 为止。这时这个仅剩的run 便是排好序的结果。
+```
+
+Timsort算法的过程包括 :
+
+（1）如何数组长度小于某个值，直接用二分插入排序算法 
+
+（2）找到各个run，并入栈
+
+ （3）按规则合并run
+
+
+
+
+
+#### 10.如何区分IO密集型任务和CPU密集型任务
+
+​		一般来说，如**文件读写、DB读写、网络请求等诸如此类为IO密集型任务**。而CPU密集型任务有：**计算型代码、Bitmap转换、Gson转换等**。
+
+​		除此之外，还可以通过“**代码**”来进行划分。接下来将了解几个划分任务的重要指标。
+
+​		① **wallTime**：任务的整体运行时长（包括了running + runnable + sleep等所有时长）
+
+获取wallTime的代码：
+
+```java
+run() {
+    long start = System.currentTimeMillis();
+    // 业务代码
+    long wallTime = System.currentTimeMillis() - start;
+}
+```
+
+
+
+​		② **CPUTime**: cputime是任务真正在cpu上跑的时长，即为running时长
+
+​		获取CPUTime的代码：
+
+```java
+run() {
+    long start = SystemClock.currentThreadTimeMillis();
+    // 业务代码
+    long cpuTime = SystemClock.currentThreadTimeMillis() - start;
+}
+```
+
+​		③ **IO Wait Time/Count**：指线程的iowait耗时。
+
+获取IO Wait Time/Count的代码：
+
+```java
+/proc/pid/task/tid/sched    //相对位置
+se.statistics.iowait_sum IO等待累计时间
+se.statistics.iowait_count IO等待累计次数
+```
+
+​		④ **runnable time**：线程runnabel被调度的时长。
+
+```java
+/proc/pid/task/tid/sched
+se.statistics.wait_sum 就绪队列等待累计时间
+```
+
+
+
+​		⑤ **Sleep Time**：线程阻塞时长（包括Interruptible-sleep和Uninterruptible-sleep和iowait的时长）
+
+```java
+/proc/pid/task/tid/sched
+se.statistics.sum_sleep_runtime 阻塞累计时间
+```
+
+​		⑥ **utime/stime**：utime是线程在用户态运行时长，stime是线程在内核态运行时长
+
+```java
+/proc/pid/task/tid/stat
+第14个字段是utime，第15个字段是stime
+```
+
+​		⑦ **rchar/wchar**：wchar是write和pwrite函数写入的byte数
+
+```java
+/proc/pid/task/tid/io
+rchar: ...
+wchar: ...
+```
+
+​		⑧ page_fault：缺页中断次数，分为major/minor fault。
+
+```java
+/proc/pid/task/tid/stat
+第10个字段是minor_fault，第12个字段是major_fault
+```
+
+​		⑨ **ctx_switches**：线程在用户/内核态的切换次数，分为voluntary和involuntary两种切换
+
+```java
+/proc/pid/task/tid/sched
+nr_switches 总共切换次数
+nr_voluntary_switches 自愿切换次数
+nr_involuntary_switches 非自愿切换次数
+```
+
+​		⑩ **percpuload**：平均每个cpu的执行时长
+
+```java
+/proc/pid/task/tid/sched
+avg_per_cpu
+```
+
+
+
+通过这些指标，就可以开始任务型的确定了。
+
+
+
+如IO型任务，如下代码：
+
+```java
+val br = BufferedReader(FileReader("xxxx"), 1024)
+try {
+    while (br.readLine() != null) {}
+} finally {
+    if (br != null) {
+        br.close()
+    }
+}
+```
+
+基于上述**部分3. iowait time/count**，我们可以在对应的日志文件中看出这段代码有明显的**iowait**。
+
+
+
+如CPU密集型任务，如下代码：
+
+```java
+var n = 0.0
+for (i in 0..9999999) {
+    n = Math.cos(i.toDouble())
+}
+```
+
+基于上述**部分6. utime/stime**的内容，看一看出这段代码utime会占比非常高，且几乎没有stime，此外没有io相关的耗时。
+
+
+
+对于业务开发来说：
+
+​		为了**不占用主线程** -> 所以**开启一个新线程** -> **频繁的new线程又会带来大量的开销** -> 所以**使用线程池进行复用** -> 而**不合理的线程池设计又会带来线程使用低效，甚至新加入的任务只能等待** -> **优化线程池**
+
+​		**区别任务是IO型还是CPU型，能为线程池的设计提供更好的指导思想，提升线程运行效率，降低业务上的不必要等待。**
+
+
+
+基于上述，使用java代码来展示出  **判断任务类型的核心思路**：
+
+```java
+class TaskInfo {
+    var cpuTimeStamp = 0.0
+    var timeStamp = 0.0
+    var iowaitTime = 0.0
+    var sleepTime = 0.0
+    var runnableTime = 0.0
+    var totalSwitches = 0.0
+    var voluntarySwitches = 0.0
+}
+```
+
+```java
+object TaskInfoUtils {
+    private const val SUM_SLEEP_RUNTIME = "se.statistics.sum_sleep_runtime"
+    private const val WAIT_SUM = "se.statistics.wait_sum"
+    private const val IOWAIT_SUM = "se.statistics.iowait_sum"
+    private const val NR_SWITCHES = "nr_switches "
+    private const val NR_VOLUNTARY_SWITCHES = "nr_voluntary_switches"
+    private var schedPath = ThreadLocal<String>()
+    fun buildCurTaskInfo(): TaskInfo {
+        val threadInfo = TaskInfo()
+        threadInfo.timeStamp = System.currentTimeMillis().toDouble()
+        threadInfo.cpuTimeStamp = SystemClock.currentThreadTimeMillis().toDouble()
+        if (schedPath.get() == null) {
+            schedPath.set("/proc/${android.os.Process.myPid()}/task/${getTid()}/sched")
+        }
+        BufferedReader(FileReader(schedPath.get()), READ_BUFFER_SIZE).use { br ->
+            br.readLines().forEach { line ->
+                when {
+                    line.startsWith(SUM_SLEEP_RUNTIME) -> threadInfo.sleepTime = line.split(":")[1].toDouble()
+                    line.startsWith(WAIT_SUM) -> threadInfo.runnableTime = line.split(":")[1].toDouble()
+                    line.startsWith(IOWAIT_SUM) -> threadInfo.iowaitTime = line.split(":")[1].toDouble()
+                    line.startsWith(NR_SWITCHES) -> threadInfo.totalSwitches = line.split(":")[1].toDouble()
+                    line.startsWith(NR_VOLUNTARY_SWITCHES) -> threadInfo.voluntarySwitches = line.split(":")[1].toDouble()
+                }
+            }
+        }
+        return threadInfo
+    }
+}
+```
+
+```java
+object TaskBoundJudge {
+    private const val CPU_CPUTIME_INTERVAL = 0.8
+    private const val CPU_SWITCHES_INTERVAL = 0.1
+    private const val CPU_IOWAIT_INTERVAL = 0.01
+    private const val CPU_SLEEP_INTERVAL = 0.02
+    private const val CPU_CPUTIME_WEIGHTS = 0.1
+    private const val CPU_SWITCHES_WEIGHTS = 0.35
+    private const val CPU_IOWAIT_WEIGHTS = 0.15
+    private const val CPU_SLEEP_WEIGHTS = 0.40
+    private const val IO_CPUTIME_INTERVAL = 0.5
+    private const val IO_SWITCHES_INTERVAL = 0.4
+    private const val IO_IOWAIT_INTERVAL = 0.1
+    private const val IO_SLEEP_INTERVAL = 0.15
+    private const val IO_CPUTIME_WEIGHTS = 0.1
+    private const val IO_SWITCHES_WEIGHTS = 0.35
+    private const val IO_IOWAIT_WEIGHTS = 0.35
+    private const val IO_SLEEP_WEIGHTS = 0.2
+    fun isCpuTask(start: TaskInfo?, end: TaskInfo?): Boolean {
+        if (start == null || end == null) {
+            return false
+        }
+        val wallTime  = end.timeStamp - start.timeStamp
+        val cpuTime = end.cpuTimeStamp - start.cpuTimeStamp
+        val runnableTime = end.runnableTime - start.runnableTime
+        val totalSwitches = end.totalSwitches - start.totalSwitches
+        val voluntarySwitches = end.voluntarySwitches - start.voluntarySwitches
+        val iowaitTime = end.iowaitTime - start.iowaitTime
+        val sleepTime = end.sleepTime - start.sleepTime
+        var result = 0.0
+        if (cpuTime / (wallTime - runnableTime) > CPU_CPUTIME_INTERVAL) {
+            result += CPU_CPUTIME_WEIGHTS
+        }
+        if (voluntarySwitches / totalSwitches < CPU_SWITCHES_INTERVAL) {
+            result += CPU_SWITCHES_WEIGHTS
+        }
+        if (iowaitTime / sleepTime < CPU_IOWAIT_INTERVAL) {
+            result += CPU_IOWAIT_WEIGHTS
+        }
+        if (sleepTime / (wallTime - runnableTime) < CPU_SLEEP_INTERVAL) {
+            result += CPU_SLEEP_WEIGHTS
+        }
+        return result > 0.5
+    }
+    fun isIOTask(start: TaskInfo?, end: TaskInfo?): Boolean {
+        if (start == null || end == null) {
+            return false
+        }
+        val wallTime = end.timeStamp - start.timeStamp
+        val cpuTime = end.cpuTimeStamp - start.cpuTimeStamp
+        val runnableTime = end.runnableTime - start.runnableTime
+        val totalSwitches = end.totalSwitches - start.totalSwitches
+        val voluntarySwitches = end.voluntarySwitches - start.voluntarySwitches
+        val iowaitTime = end.iowaitTime - start.iowaitTime
+        val sleepTime = end.sleepTime - start.sleepTime
+        var result = 0.0
+        if (cpuTime / (wallTime - runnableTime) < IO_CPUTIME_INTERVAL) {
+            result += IO_CPUTIME_WEIGHTS
+        }
+        if (voluntarySwitches / totalSwitches > IO_SWITCHES_INTERVAL) {
+            result += IO_SWITCHES_WEIGHTS
+        }
+        if (iowaitTime / sleepTime > IO_IOWAIT_INTERVAL) {
+            result += IO_IOWAIT_WEIGHTS
+        }
+        if (sleepTime / (wallTime - runnableTime) > IO_SLEEP_INTERVAL) {
+            result += IO_SLEEP_WEIGHTS
+        }
+        return result > 0.5
+    }
+}
+```
+
+当我们想对某个方法进行计算是CPU还是IO。可以在这个方法的开始、结束调用 `TaskInfoUtils.buildCurTaskInfo()`；然后调用 `TaskBoundJudge.isCpuTask(start,end)`，`TaskBoundJudge.isIOTask(start,end)`即可。
+
+
+
+基于IO密集型任务的线程池：
+
+```java
+public static final ExecutorService IO_EXECUTOR = new ThreadPoolExecutor(
+    2, 
+    128, 
+    15, 
+    TimeUnit.SECONDS, 
+    new SynchronousQueue<>(), 
+    new CustomThreadFactory("MDove-IO", CustomThreadPriority.NORMAL),
+    AbortPolicy() // 根据业务情况，自行定义拒绝实现。比如上报监控平台
+);
+```
+
+CPU密集型参考线程池：
+
+```java
+public static final int CPU_COUNT = Runtime.getRuntime().availableProcessors();
+public static final int MAXIMUM_POOL_SIZE = CPU_COUNT * 2 + 1;
+private static final int CPU_CORE_POOL_SIZE = Math.max(Math.min(MAXIMUM_POOL_SIZE, 4), Math.min(CPU_COUNT + 1, 9));
+public static final ExecutorService CPU_EXECUTOR = new ThreadPoolExecutor(
+    CPU_CORE_POOL_SIZE,
+    CPU_COUNT * 2 + 1,
+    30, 
+    TimeUnit.SECONDS,
+    new LinkedBlockingQueue<>(256),
+    new SSThreadFactory("MDove-CPU", CustomThreadPriority.NORMAL),
+    AbortPolicy() // 根据业务情况，自行定义拒绝实现。比如上报监控平台
+);
+```
+
+上述线程池设计的额外代码：
+
+```java
+class CustomThreadFactory : ThreadFactory {
+    var name: String
+        private set
+    private var priority = CustomThreadPriority.NORMAL
+    constructor(name: String, priority: CustomThreadPriority) {
+        this.name = name
+        this.priority = priority
+    }
+    override fun newThread(r: Runnable): Thread {
+        val name = name + "-" + sCount.incrementAndGet()
+        return object : Thread(r, name) {
+            override fun run() {
+                if (priority == CustomThreadPriority.LOW) {
+                    Process.setThreadPriority(Process.THREAD_PRIORITY_BACKGROUND)
+                } else if (priority == CustomThreadPriority.HIGH) {
+                    Process.setThreadPriority(Process.THREAD_PRIORITY_DISPLAY)
+                }
+                super.run()
+            }
+        }
+    }
+    companion object {
+        private val sCount = AtomicInteger(0)
+    }
+}
+enum class CustomThreadPriority {
+    LOW, NORMAL, HIGH, IMMEDIATE
+}
+```
 
 
 
 
 
 
-
-
-
-
-
-####  
 
 ------
 
@@ -257,9 +939,88 @@ public class Person implements Serializable {
 
 #### 	1.计算机网络内容：TCP三次握手的概念，为什么不能两次握手？ (按书中的知识讲的，但面试官觉得繁琐，说一句话"根据初始序列号"什么就行了)
 
-#### 
+
+
+
+
+
+
+
 
 #### 	2.（笔试） TCP三次握手以及TCP四次挥手
+
+
+
+
+
+
+
+
+
+#### 3.get和post区别
+
+​	GET 和POST都是HTTP的请求方法。
+
+​	那么，HTTP请求报文的格式怎么样呢？具体看下图：
+
+![HTTP报文](C:\Users\AWU\Desktop\面试学习\面经问题图片存储池\HTTP报文.png)
+
+
+
+可以看到请求报文由三部分组成：
+
+​		请求行：由请求方法（Method）、URL 字段和 HTTP 的协议版本组成，注意其中的空格、回车符和换行符均不可省略，所以我们的请求方法实际上就是位于请求行中的了。
+
+​		请求头部：位于请求行之后，个数可以为 0~若干个，每个请求头部都包含一个头部字段名和一个值，它们之间用冒号 ":" 分隔，在最后用回车符和换行符表示结束。
+​		请求数据：如果请求方法为 GET，那么请求数据为空。它主要是在 POST 中进行使用，适用于需要填表单（FORM）的场景。
+
+
+
+回到GET和POST方法中，关于GET方法：
+
+​	① GET方法请求的数据会附在 URL 之后（放在请求行中），以 **?** 分割 URL 和传输数据，**多个参数用 & 连接**。
+
+​	② 根据HTTP规范，GET用于信息获取，而且应是 **安全和幂等**。( **安全**，指的是非修改信息，即该操作用于获取信息而非修改信息。也就是说**GET方法仅仅是获取资源信息，就如数据库查询操作一样。**
+
+​	**幂等**，指的是对**同一URL的多个请求应该返回同样的结果**。   而在实际过程中，这个规定没有那么严格。例如在一个新闻应用中，新闻站点的头版不断更新，虽然第二次请求会返回不同的一批新闻，该操作仍然被认为是安全的和幂等的，因为它**总是返回当前的新闻**。)
+
+​	③ GET会被浏览器主动缓存，如果下次传输数据相同，那么就会返回缓存中的内容，以便更快的展示数据。
+
+​	④ GET 方法的 URL **一般都具有长度限制**，但是需要注意的是 **HTTP 协议中并未规定 GET 请求的长度。这个长度限制主要是由浏览器和 Web 服务器所决定的，并且各个浏览器对长度的限制也各不相同**。 
+
+​	⑤ GET方法**只产生一个TCP数据包**，浏览器会把请求头和请求数据捆绑发送出去，服务器响应200即返回数据。
+
+​	⑥ POST的安全性要比GET的安全性高。
+
+有关POST：
+
+​	① 根据HTTP规范，**POST表示可能修改服务器上的资源的请求**。
+
+​	② POST方法因为**可能修改服务器上的资源**，所以**不符合安全和幂等性**。
+
+​	③ POST方法的请求信息是放在请求数据中，所以它的**请求信息是没有长度限制**的。
+
+​	④ **POST方法会产生两个TCP数据包**，浏览器会先将请求头发送给服务器，待服务器响应100 continue(接收正常，允许继续发送) ，浏览器再发送请求数据，服务器响应200返回数据。
+
+
+
+​		GET和POST的区别呢？上面所述只是各自的特点(特性)，看起来似乎有些许不同，但它们的本质是一样的。**都是HTTP协议的请求方法。而HTTP又基于TCP/IP协议进行的数据传输**，所以**实际上GET和POST都是TCP连接,并无区别。但是由于 HTTP 的规定以及浏览器/服务器的限制，导致它们在应用过程中可能会有所不同**
+
+​		即使GET和POST的底层是TCP，在HTTP协议中仍需要为数据传输进行一个分类——这一点可以理解成，假如直接使用TCP进行数据传输，那么无论是获取资源还是修改资源的请求均为TCP连接， 并无法判断出是什么类型的请求。所以在HTTP协议中，就会对不同的请求设置不同的类别从而方便管理和辨别。
+
+
+
+
+
+#### 4.Cookie和Session的区别
+
+​	首先，需要了解为什么需要Cookie和Session呢？这是因为HTTP协议是一个无状态的协议，不会保存客户端的状态。
+
+​	cookie的出现解决了上面的问题，第一次登陆后服务器会返回一个cookie给浏览器，然后(客户端)浏览器保存在本地中，当用户第二次返回请求时，就会把上次请求存储的cookie数据自动携带给服务器。
+
+​	如果**关闭浏览器cookie即刻失效**——说明cookie保存在**内存**中；若**不失效**则是在**磁盘**中。
+
+
 
 
 
@@ -331,7 +1092,133 @@ public static ExecutorService newFixedThreadPool(int nThreads) {
 
 
 
-​																		
+​		在这里，我们知道线程有五种状态：**新建、就绪、运行、阻塞、终止**。
+
+​		而一般一个线程在执行完任务后就结束了，如何让它再执行下一个任务呢？想要实现线程的复用，那么**必须从Runnable接口的run()方法上入手**。
+
+​		接下来，通过查看ThreadPoolExecutor线程池类源码可知：
+
+```java
+// 内部类 Worker
+private final class Worker extends AbstractQueuedSynchronizer implements Runnable
+         {
+             /** 各种代码...  */        
+             Runnable firstTask;       
+             Worker(Runnable firstTask) {
+                 setState(-1); // inhibit interrupts until runWorker
+                 this.firstTask = firstTask;
+                 this.thread = getThreadFactory().newThread(this);
+             }       
+             public void run() {
+                 runWorker(this);
+             }        
+         }
+
+
+
+     //addWorker()方法，启动线程； 
+     private boolean addWorker(Runnable firstTask, boolean core) {
+       w = new Worker(firstTask);
+       final Thread t = w.thread;
+       //...代码
+       
+       // 很明显了，从这里启动线程的； 
+       t.start(); 
+       ...//代码
+     }
+
+
+
+     // getTask()方法，很显然这个方法是从 任务队列(workQueue)中，获取任务； 
+      private Runnable getTask() {
+                 // 各种代码...
+                 if ((wc > maximumPoolSize || (timed && timedOut))
+                     && (wc > 1 || workQueue.isEmpty())) {
+                     //...
+                 } // ...    
+         }
+
+
+
+     // 核心部分：runWorker()方法：
+         final void runWorker(Worker w) {
+              // 各种代码...
+             Runnable task = w.firstTask;
+             w.firstTask = null;
+             // 各种代码...
+             try {
+             // 重点：看这个大while循环：实现的线程复用；  
+                 while (task != null || (task = getTask()) != null) {
+                      // 各种代码...
+                 }
+             }
+         }
+
+```
+
+从上面的学习中，我们知道，线程池是通过 new ThreadPoolExecutor得到的，而**线程则是通过其内部类Worker创建**，也就是说，只要 **new Worker(Runnable firstTask)，就会创建一个线程**，因为Worker的构造方法里边有这么一句：
+
+```java
+`this.thread = getThreadFactory().newThread(this);`
+```
+
+ 并且创建线程的时候，会将**这个内部类本身this** 传到参数列表里边，去当task。
+
+​		在线程池中，线程是**如何启动的**：在源码的addWorker()方法中，可以看到：`t.start();` 很明显了，从**addWorker()方法**这里**启动线程**的；
+
+​		那么，启动了线程，**线程又是如何运行的**呢？——从源码的addWorker()方法中有:
+
+```java
+w = new Worker(firstTask);
+```
+
+也就是说，在线程启动的时候已经将内部类worker对象传入进去了，而内部类Worker实现了Runnable接口并重写了run()方法。这意味着：**jvm会执行Worker里的run方法，使线程进入运行状态；**
+
+
+
+那么，**线程池是如何实现了复用的呢**？—— **用Work内部类中的run()方法里边的runWorker()方法里边的while大循环，实现了线程的复用；**
+
+```java
+final void runWorker(Worker w) {   // 各种代码...
+  // 核心：这个大while循环：
+     while (task != null || (task = getTask()) != null) {
+          // 各种代码...
+     }
+     // 各种代码...
+}
+
+```
+
+从源码可看出,这个runWorker()方法里面，有一个大大的**while循环，**
+
+① **当我们的task任务，不为空的时候，即，通过getTask()方法，可以一直获取到新的任务 ，那么这个while循环就永远在进行；**
+ 从而runWorker()方法不会停止，runWorker()方法外边的run()方法也就不会停止，继而**线程会一直处于运行状态，去执行新的任务，从而达到了线程复用的目的**；
+
+② 当我们的**task任务为空了，则while循环结束，也就是说，这个线程结束** 。
+
+
+
+
+
+
+
+
+#### 补充点：Callable和Runnable接口的区别有什么呢
+
+​	相同：
+​		① 两个都属于接口。
+
+​		② 都需要调用Thread类中的start()方法启动线程
+
+​	不同： 
+
+​		① Callable接口的核心是call()方法，允许返回值。Runnable接口的核心是run()方法，没有返回值
+
+​		②call()方法可以抛出异常，run方法不能抛出异常。(这是因为Runnable接口是jdk1.1版本就有了，当时并并不存在返回值，后期jdk1.5版本进行优化，出现了Callable接口实现返回值和抛异常)
+
+​		③ Callable和Runnable接口都可以应用于 Executors类中，但Thread类只支持Runnable.( 使用Callable接口来实现线程的创建，需要借助 Future接口的唯一实现类FutureTask类获取返回结果，而FutureTask里间接实现了Runnable接口属于Runnable的子类，故通过创建获得了Callable接口实现类的FutureTask类作为Thread类的start()方法的参数)																		
+
+
 
 
 
@@ -509,9 +1396,15 @@ public class MySingleton {
 
 所谓**高并发，是一种系统运行过程中遇到的一种“短时间内遇到大量操作请求”的情况，主要发生在web系统集中大量访问收到大量请求**（例如：12306的抢票情况；天猫双十一活动）。该情况的发生会导致系统在这段时间内执行大量操作，例如对资源的请求、数据库的操作等（定义）
 
-高并发相关**常用的一些指标有：响应时间、吞吐量、每秒查询率QPS、并发用户数**
+高并发相关**常用的一些指标有：响应时间、吞吐量、每秒查询率QPS、并发用户数**（**情景实践中的第一题**有关此类的叙述)
 
 而多线程，指的是一个进程中可以有多个执行路径。
+
+
+
+
+
+
 
 
 
@@ -533,7 +1426,11 @@ public class MySingleton {
 
 
 
+#### 2.双亲委派模型了解吗?
 
+
+
+#### 3.数组在内存中如何分配
 
 
 
@@ -611,7 +1508,7 @@ sort set 有序集合
 
 ### 	1.sql语句的执行顺序了解吗？  （https://blog.csdn.net/u014044812/article/details/51004754）
 
-​			① from  ② join   ③ on   ④ where  ⑤ group by  ⑥ avg,sum...  ⑦  having  ⑧ select  ⑨ distinct  ⑩ order by  11.limit
+​			① from  ② join   ③ on   ④ where  ⑤ group by  ⑥ avg,sum...  ⑦  having  ⑧ select  ⑨ distinct  ⑩ order by  (11).limit
 
 ​		具体流程：
 
@@ -639,6 +1536,104 @@ sort set 有序集合
 
 
 
+### 2.mysql的内置函数有哪些？
+
+
+
+
+
+### 3.mysql中count(*)和count(1)和count(column)区别
+
+
+
+解决问题地址：https://liuchenyang0515.blog.csdn.net/article/details/120851980?spm=1001.2101.3001.6650.1&utm_medium=distribute.pc_relevant.none-task-blog-2%7Edefault%7ECTRLIST%7Edefault-1.essearch_pc_relevant&depth_1-utm_source=distribute.pc_relevant.none-task-blog-2%7Edefault%7ECTRLIST%7Edefault-1.essearch_pc_relevant
+
+```java
+1.count() 统计满足查询条件的结果集的总行数(包含null)，其中count(1)和count()的处理逻辑完全相同
+2.count(column) 如果列定义时不允许为null，那么统计满足查询条件的不为null的总行数
+```
+
+在解决该问题时，了解以下：
+
+​		聚集索引和非聚集索引中的记录是一一对应的，而非聚集索引记录中包含的列（索引列+主键`id`）是少于聚集索引（所有列）记录的，所以同样数量的非聚集索引记录比聚集索引记录占用更少的存储空间。
+
+​		当统计表中有多少数据时，会常常使用如下语句：
+
+```java
+SELECT COUNT(*) FROM demo_info;
+```
+
+分析一下执行计划：
+
+![MYSQL中的selectcount()](C:\Users\AWU\Desktop\面试学习\面经问题图片存储池\MYSQL中的selectcount().png)
+
+```java
+在执行上述查询时，server层会维护一个名叫count的变量，然后：
+
+server层向InnoDB要第一条记录。
+
+InnoDB找到uk_key2的第一条二级索引记录，并返回给server层（注意：由于此时只是统计记录数量，所以并不需要回表）。
+
+由于count函数的参数是*，MySQL会将*当作常数0处理。由于0并不是NULL，server层给count变量加1。
+
+server层向InnoDB要下一条记录。
+
+InnoDB通过二级索引记录的next_record属性找到下一条二级索引记录，并返回给server层。
+
+server层继续给count变量加1。
+
+重复上述过程，直到InnoDB向server层返回没记录可查的消息。
+
+server层将最终的count变量的值发送到客户端。
+ 
+```
+
+
+
+​		对于**count(*)、count(1)或者任意的count(常数) 来说，**读取哪个索引的记录并不重要，因为**server层只关心存储引擎是否读取到了记录**，而**并不需要从记录中提取指定的字段来判断是否为NULL**。所以**优化器会使用占用存储空间最小的那个索引来执行查询**。
+
+
+
+```
+explain SELECT COUNT(id) FROM demo_info;
+```
+
+下面来看看对于主键id的查询，而对于**count(id)**来说，由于**id是主键**，**不论是聚簇索引记录，还是任意一个二级索引记录中都会包含主键字段**，所以读取任意一个索引中的记录都可以获取到id字段，此时**优化器也会选择占用存储空间最小的那个索引来执行查询**。
+
+![Mysql的count(id主键)](C:\Users\AWU\Desktop\面试学习\面经问题图片存储池\Mysql的count(id主键).png)
+
+
+
+```
+explain select count(common_field) from demo_info
+```
+
+​		再来看看非索引列，对于**count(非索引列)**来说，优化器选择全盘扫描，这说明**只能在聚集索引的叶子结点顺序扫描**。
+
+![Mysql中的count(非索引列)](C:\Users\AWU\Desktop\面试学习\面经问题图片存储池\Mysql中的count(非索引列).png)
+
+> 请确认你理解了全表扫描，它是顺序扫描聚集索引的所有叶子结点并判断。
+
+
+
+**什么是全盘扫描？**
+
+
+
+
+
+综上所述：
+
+```java
+对于count(*)、count(常数)、count(主键)形式的count函数来说，优化器可以选择扫描成本最小的索引执行查询，从而提升效率，它们的执行过程是一样的，只不过在判断表达式是否为NULL时选择不同的判断方式，这个判断为NULL的过程的代价可以忽略不计，所以我们可以认为count(*)、count(常数)、count(主键)所需要的代价是相同的。
+
+  而对于count(非索引列)来说，优化器选择全表扫描，说明只能在聚集索引的叶子结点顺序扫描。
+
+  count(二级索引列)只能选择包含我们指定的列的索引去执行查询，可能导致优化器选择的索引执行的代价并不是最小。
+
+  其实上述这些区别就是因为非聚集索引记录比聚集索引记录占用更少的存储空间，减少更多I/O成本，所以优化器才有了不同索引的选择，仅此而已。
+ 
+```
 
 
 
@@ -647,7 +1642,14 @@ sort set 有序集合
 
 
 
-##  
+
+
+
+
+
+
+
+
 
 
 
@@ -755,7 +1757,7 @@ sort set 有序集合
 
 
 
-
+### 2.RPC框架了解吗？如果要让你设计一个RPC框架，你该怎么做？
 
 
 
